# bazel-example

./: .bazelrc  .bazelversion  .eslintignore  README.md  WORKSPACE  bazel_deps.bzl  deps.bzl  docker-compose.yaml  package.json  tsconfig.json
.github/workflows/: ci.yaml
common/nest/: BUILD.bazel
common/node/: BUILD.bazel  package.json
common/node/src/: fs.ts  index.ts
common/node/src/errors/tests/: app-error.test.ts
common/node/src/tests/: fs.test.ts
common/utils/: BUILD.bazel
network/email-queue/: BUILD.bazel  package.json  tsconfig.json
network/email-queue/src/: index.ts
network/feedback-api/: BUILD.bazel
network/feedback-api/src/: form-dto.ts  form-response.ts  index.ts
services/feedback/: .env  BUILD.bazel  tsconfig.json
services/feedback/src/: app-module.ts
services/feedback/src/api/: api-controller.ts  api-module.ts  api-service.ts
services/feedback/src/config/: config-service.ts  env.ts
tools/jest/: index.bzl
tools/services/: index.bzl
tools/tests/: index.bzl  run_tests.ts
