load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "tsconfig.json",
    ],
)

DEPS = [
    "@npm//@types/node",
]

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
    ],
)

SRC_FILES = glob(["src/**/*.ts"]) + ["index.ts"]

ts_project(
    name = "components",
    srcs = SRC_FILES,
    allow_js = True,
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = DEPS,
)

js_library(
    name = "email-queue",
    package_name = "@network/email-queue",
    srcs = ["package.json"],
    deps = [":components"],
)
