load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")
load("//tools/services:index.bzl", "nodejs_service")

package(default_visibility = ["//visibility:public"])

DEPS = [
    "//network/feedback-api",
    "//network/email-queue",
    "//common/node",
    "//common/nest",
    "//common/utils",
    "@npm//@types/node",
    "@npm//fastify-helmet",
    "@npm//fastify-formbody",
    "@npm//reflect-metadata",
    "@npm//@nestjs/common",
    "@npm//@nestjs/core",
    "@npm//@nestjs/platform-fastify",
    "@npm//@nestjs/config",
    "@npm//fastify-multipart",
    "@npm//class-validator",
    "@npm//class-transformer",
    "@npm//rxjs",
    "@npm//joi",
]

TEST_FILES = ["src/**/*.test.ts"]

SRC_FILES = glob(
    [
        "src/**/*.ts",
    ],
    exclude = TEST_FILES,
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig.json",
        "//common/nest:tsconfig",
        "//common/node:tsconfig",
        "//common/utils:tsconfig",
        "//network/email-queue:tsconfig",
        "//network/feedback-api:tsconfig",
    ],
)

ts_project(
    name = "components",
    srcs = SRC_FILES,
    allow_js = True,
    composite = True,
    declaration = True,
    incremental = True,
    source_map = True,
    tsconfig = ":tsconfig",
    deps = DEPS,
)

copy_to_bin(
    name = "copy_env",
    srcs = [".env"],
)

nodejs_service(
    name = "feedback",
    data = [
        ":components",
    ],
    dev_data = [":copy_env"],
    entry_point = "src/index.ts",
    service_name = "feedback",
)

filegroup(
    name = "components_test",
    srcs = SRC_FILES + glob(TEST_FILES),
)

copy_to_bin(
    name = "copy_test_env",
    srcs = [".test.env"],
)
